--- a/portada.html
+++ b/portada.html
@@ -4,13 +4,11 @@
  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 <!-- TÍTULO SEO -->
 <title>Nuevo Amanecer — Regalos Personalizados, Agendas, Biblias y Tazas</title>
-
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- META DESCRIPTION -->
 <meta name="description" content="Nuevo Amanecer — Regalos personalizados en Puerto Montt: tazas, biblias, agendas, libretas, llaveros y más. Diseños únicos hechos a mano con entrega inmediata.">
-
 <!-- KEYWORDS -->
 <meta name="keywords" content="nuevo amanecer, regalos personalizados, tazas personalizadas, agendas, biblias, libretas, llaveros, artesanía, diseño personalizado, Puerto Montt">
 
@@ -21,15 +19,15 @@
 <!-- OPEN GRAPH (Facebook / WhatsApp) -->
 <meta property="og:title" content="Nuevo Amanecer — Regalos Personalizados">
 <meta property="og:description" content="Regalos personalizados hechos con amor. Tazas, agendas, biblias, libretas y más con entrega inmediata.">
-<meta property="og:image" content="https://nuevo-amanecer.vercel.app/portadas/logo_nuevo.png">
-<meta property="og:url" content="https://nuevo-amanecer.vercel.app">
+<meta property="og:image" content="https://nuevoamanecertienda.vercel.app/portadas/logo_nuevo.png">
+<meta property="og:url" content="https://nuevoamanecertienda.vercel.app/>
 <meta property="og:type" content="website">
 
 <!-- TWITTER CARD -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Nuevo Amanecer — Regalos Personalizados">
 <meta name="twitter:description" content="Regalos personalizados: tazas, agendas, llaveros, biblias y más.">
-<meta name="twitter:image" content="https://nuevo-amanecer.vercel.app/portadas/logo_nuevo.png">
+<meta name="twitter:image" content="https://nuevoamanecertienda.vercel.app/portadas/logo_nuevo.png">
 
 <!-- JSON-LD (SEO avanzado) -->
 <script type="application/ld+json">
@@ -37,14 +35,14 @@
   "@context": "https://schema.org/",
   "@type": "LocalBusiness",
   "name": "Nuevo Amanecer",
-  "image": "https://nuevo-amanecer.vercel.app/portadas/logo_nuevo.png",
+  "image": "https://nuevoamanecertienda.vercel.app/portadas/logo_nuevo.png",
   "description": "Regalos personalizados hechos a mano: tazas, agendas, biblias, libretas, llaveros y más.",
   "address": {
     "@type": "PostalAddress",
     "addressLocality": "Puerto Montt",
     "addressCountry": "CL"
   },
-  "url": "https://nuevo-amanecer.vercel.app",
+  "url": "https://nuevoamanecertienda.vercel.app/",
   "sameAs": [
     "https://www.instagram.com/nuevo_amanecer_9",
     "https://www.tiktok.com/@romyschw",
@@ -55,7 +53,7 @@
 </script>
 
   <!-- FAVICON -->
-  <link rel="icon" href="/portadas/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- ESTILOS -->
   <link rel="stylesheet" href="style.css" />
@@ -113,58 +111,57 @@
  </div>
 </section>
 
-
 <!--categorias-->
 <section class="categorias">
-  <div class="categoria-card" a href="productos.html#tazas" id="tazas" loading="lazy">
-    <div class="icono"><i class="fas fa-mug-hot"></i></div>
-    <h3>Tazas</h3>
+  <div class="categoria-card" id="tazas" loading="lazy">
+    <div class="icono"><i class="fas fa-mug-hot"></a></i></div>
+    <h3 >Tazas</h3>
     <p class="descripcion">Comienza tu día con un sorbo de fe </p>
   </div>
 
-   <div class="categoria-card" a href="/portadas/productos.html" id="vasos" loading="lazy">
+   <div class="categoria-card"  id="vasos" loading="lazy">
     <div class="icono"><i class="fas fa-glass-whiskey"></i></div>
     <h3>Vasos</h3>
     <p class="descripcion">Refresca tu espíritu con cada trago </p>
   </div>
 
-   <div class="categoria-card" a href="/portadas/productos.html" id="libretas" loading="lazy">
+   <div class="categoria-card" id="libretas" loading="lazy">
     <div class="icono"><i class="fas fa-book"></i></div>
     <h3>Libretas</h3>
     <p class="descripcion">Escribe tus sueños y oraciones </p>
   </div>
    
-   <div class="categoria-card" a href="/portadas/productos.html" id="imantados" loading="lazy" >
+   <div class="categoria-card"  id="imantados" loading="lazy" >
     <div class="icono"><i class="fas fa-magnet"></i></div>
     <h3> Imantados</h3>
     <p class="descripcion">Mensajes que inspiran tu día a día </p>
   </div>
   
- <div class="categoria-card" a href="/portadas/productos.html" id="biblias"  loading="lazy">
+ <div class="categoria-card"  id="biblias"  loading="lazy">
     <div class="icono"><i class="fas fa-cross"></i></div>
     <h3>Biblias</h3>
     <p class="descripcion">Palabras que transforman vidas </p>
   </div>
 
-  <div class="categoria-card" a href="/portadas/productos.html" id="libros_colorear"  loading="lazy">
+  <div class="categoria-card"  id="libros_colorear"  loading="lazy">
     <div class="icono"><i class="fas fa-book-open"></i></div>
     <h3>Libros colorear</h3>
     <p class="descripcion">Distintos diseños</p>
   </div>
 
-  <div class="categoria-card" a href="/portadas/productos.html" id="calendarios"  loading="lazy">
+  <div class="categoria-card"  id="calendarios"  loading="lazy">
     <div class="icono"><i class="fas fa-calendar-alt"></i></div>
     <h3>Calendarios</h3>
     <p class="descripcion">Organiza tu tiempo con propósito </p>
   </div>
 
-  <div class="categoria-card" a href="/portadas/productos.html" id="llaveros" loading="lazy">
+  <div class="categoria-card" id="llaveros" loading="lazy">
     <div class="icono"><i class="fas fa-key"></i></div>
     <h3>Llaveros</h3>
     <p class="descripcion">Lleva inspiración a donde vayas </p>
   </div>
 
-  <div class="categoria-card" a href="/portadas/productos.html" id="agendas"  loading="lazy">
+  <div class="categoria-card"  id="agendas"  loading="lazy">
     <div class="icono"><i class="fas fa-calendar-alt"></i></div>
     <h3>Agendas</h3>
     <p class="descripcion">Organiza tus días con propósito </p>
@@ -177,7 +174,7 @@
   <div class="favoritos-container"> 
     <h2 class="favoritos-title">Nuestros Favoritos</h2> 
     <div class="favoritos-grid">
-      <div class="favorito-card">2
+      <div class="favorito-card">
         <img src="galeria/taza_mama_favoritos.png" alt="Taza de sublimación personalizada con diseño creativo" id="tazas" loading="lazy" />
         <h3>Taza Mamá</h3>
         <p>Taza personalizada con mensaje especial.</p>
@@ -303,7 +300,7 @@
 
     setTimeout(() => {
       boton.style.display = "none";
-    }, 5000); // Ocultar después de 5 segundos
+    }, 5000); 
   }
 
   // Mostrar inicialmente después de 4 segundos
@@ -316,7 +313,6 @@
     mostrarBotonSorpresa();
   }, 20000);
 
-  // Al hacer clic, redirige a contacto
   document.addEventListener("DOMContentLoaded", function () {
     document.getElementById("botonSorpresa").onclick = function () {
       window.location.href = "#redesSociales";
@@ -355,7 +351,7 @@
 <footer class="footer-section"> 
   <div class="footer-container">
     <div class="footer-logo">
-      <img src="galeria/logo_nuevo.png" alt="Logo Nuevo Amanecer" class="footer-logo-img">
+      <img src="galeria/logo_nuevo.png" class="footer-logo-img" loading="lazy" id="logoFooter">
     </div>
     <div class="footer-info">
       <p>© 2025 Nuevo Amanecer. Todos los derechos reservados.</p>
@@ -364,7 +360,14 @@
   </div> 
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Botón Sorpresa -->
+
+<!-- Botón Sorpresa ingreso-->
+
+<script>
+  document.getElementById("logoFooter").ondblclick = () => {
+    window.location.href = "admin.html"; 
+  };
+</script>
 
 </body>
 </html>
