--- a/productos.html
+++ b/productos.html
@@ -7,6 +7,7 @@
 
   <!-- TÍTULO SEO -->
   <title>Productos — Nuevo Amanecer | Tazas, Biblias, Agendas, Libretas y más</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <!-- META DESCRIPTION -->
   <meta name="description" content="Explora los productos de Nuevo Amanecer: tazas personalizadas, agendas, biblias, libretas, llaveros, vasos, calendarios y más. Diseños únicos hechos a mano en Puerto Montt.">
@@ -21,15 +22,15 @@
   <!-- OPEN GRAPH -->
   <meta property="og:title" content="Productos — Nuevo Amanecer">
   <meta property="og:description" content="Regalos personalizados: tazas, biblias, agendas, libretas y más. Hecho a mano con amor.">
-  <meta property="og:image" content="https://nuevo-amanecer.vercel.app/portadas/logo_nuevo.png">
-  <meta property="og:url" content="https://nuevo-amanecer.vercel.app/productos.html">
+  <meta property="og:image" content="https://nuevoamanecertienda.vercel.app/portadas/logo_nuevo.png">
+  <meta property="og:url" content="https://nuevoamanecertienda.vercel.app/productos.html">
   <meta property="og:type" content="website">
 
   <!-- TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Productos — Nuevo Amanecer">
   <meta name="twitter:description" content="Explora nuestros productos personalizados: tazas, biblias, agendas y más.">
-  <meta name="twitter:image" content="https://nuevo-amanecer.vercel.app/portadas/logo_nuevo.png">
+  <meta name="twitter:image" content="https://nuevoamanecertienda.vercel.app/portadas/logo_nuevo.png">
 
   <!-- JSON-LD -->
   <script type="application/ld+json">
@@ -38,8 +39,8 @@
     "@type": "CollectionPage",
     "name": "Productos — Nuevo Amanecer",
     "description": "Catálogo de productos personalizados: tazas, biblias, agendas, libretas y más.",
-    "image": "https://nuevo-amanecer.vercel.app/portadas/logo_nuevo.png",
-    "url": "https://nuevo-amanecer.vercel.app/productos.html"
+    "image": "https://nuevoamanecertienda.vercel.app/portadas/logo_nuevo.png",
+    "url": "https://nuevoamanecertienda.vercel.app/productos.html"
   }
   </script>
 
