añadi readme y mejoras de diseño

--- a/portada.html
+++ b/portada.html
@@ -98,7 +98,7 @@
   <div class="hero-bg-animated"></div> <i class="ph ph-heart"></i>
   <h1 class="hero-title">Nuevo Amanecer </h1>
   <p class="hero-subtitle">
-   “Diseñamos para recordarte que cada  día es una nueva oportunidad.”
+   “Creaciones que fortalecen tu alma y alegran tu corazón.””
   </p>
   <div class="boton-galeria">
     <a class="button type--A" href="productos.html">
@@ -232,10 +232,10 @@
 <section class="sobre-nosotras-section" id="sobrenosotras">
   <div class="sobre-nosotras-container">
     <h2 class="sobre-nosotras-title">¿Quiénes somos?</h2>
-    <p>
-      <strong>Nuevo Amanecer</strong> es un emprendimiento familiar apasionado por el diseño, los colores y los detalles. 
-      Creamos productos personalizados que reflejan tu esencia, ideales para regalar, sorprender o destacar tu marca. 
-      Cada pieza es hecha con dedicación y mucho amor, buscando inspirar y acompañar momentos especiales en tu vida.
+    En Nuevo Amanecer creemos firmemente que Dios renueva nuestras fuerzas cada mañana, y ese mensaje es el corazón de lo que hacemos. 
+    Cada diseño, cada frase y cada detalle busca recordarte que nunca estás solo/a, que Dios guía tus pasos y que siempre hay un nuevo 
+    comienzo en Él. Más que productos, creamos herramientas que inspiran, levantan y conectan con el propósito que Dios tiene para tu vida.<p>
+      <strong>Nuevo Amanecer</strong> 
     </p>
     <div class="sobre-nosotras-equipo">
       <img src="galeria/familia.jpg" alt="Equipo Nuevo Amanecer" class="sobre-nosotras-img">
@@ -355,7 +355,7 @@
     </div>
     <div class="footer-info">
       <p>© 2025 Nuevo Amanecer. Todos los derechos reservados.</p>
-      <p>Diseñado con 💻 y ✨ por <strong>KarenDEV.com</strong></p>
+      <p>Diseñado con 💻 y ✨ </p>
     </div>
   </div> 
 </footer>
