arreglo seo , links y readme

--- a/admin.html
+++ b/admin.html
@@ -98,7 +98,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth-compat.js"></script>
 
-  <!-- SCRIPT CORRECTO (DEBE IR AQUÍ) -->
+  <!-- SCRIPT CORRECTO  -->
   <script>
     // CONFIGURACIÓN FIREBASE
     const firebaseConfig = {
