--- a/productos.html
+++ b/productos.html
@@ -119,13 +119,11 @@ async function cargarCarrusel() {
     }
 }
 </script>
-
   <hr class="separator" />
 </section>
 
-
 <!-- FILTROS -->
-<section class="galeria-section">
+<section class="galeria-section" id="galeria-section">
   <div class="galeria-filtros">
       <button onclick="filtrarGaleria('todos')">Ver Todo</button>
       <button onclick="filtrarGaleria('tazas')">Tazas</button>
